# doc-gen-assignment-palindrome

./: .env.example  .gitignore  PROJECT_GUIDANCE.md  README.md  pyproject.toml
config/: template_config.json
data/client_01_clean/: client_data_db.json  fde_notes.md  meeting_notes.docx  platform_market_update.docx  report_request.docx
data/client_02_medium/: client_data_db.json  meeting_notes.docx  platform_market_update.docx  report_request.docx  template_spec.md
data/client_03_hard/: client_data_db.json  fde_notes.md  meeting_notes.docx  platform_market_update.docx  portfolio_pack.docx  report_request.docx
data/client_04_stretch/: client_data_db.json  fde_notes.md  meeting_notes.docx  platform_market_update.docx  portfolio_pack.docx  report_request.docx
pipeline/: formatter.py  generate.py  io_utils.py
src/: __init__.py
src/agent_pipeline/: __init__.py  generate.py
src/document_formatter/: __init__.py  formatting.py  loading.py
